# hmatrix-float

./: .gitignore  README.md  hmatrix-float.cabal
bench/: Benchmark.hs
src/Internal/: Algorithms.hs  CG.hs  Chain.hs  Container.hs  Conversion.hs  Convolution.hs  Element.hs  IO.hs  LAPACK.hs  Matrix.hs  Modular.hs  Numeric.hs  Random.hs  Sparse.hs  Static.hs  Util.hs  Vector.hs  Vectorized.hs
src/Internal/C/: lapack-aux-float.c  lapack-aux-float.h  vector-aux-float.c
src/Numeric/: LinearAlgebra.hs  Vector.hs
src/Numeric/LinearAlgebra/: Static.hs
tests/Test/: TestBase.hs
tests/Test/Numeric/LinearAlgebra/: Tests.hs
tests/Test/Numeric/LinearAlgebra/Tests/: Instances.hs  Properties.hs
